tests/ui/type/type-annotation-needed.stderr
error[E0283]: type annotations needed
  --> $DIR/type-annotation-needed.rs:7:5
   |
LL |     foo(42);
   |     ^^^ cannot infer type of the type parameter `T` declared on the function `foo`
   |
note: type must be known for type parameter in this
  --> $DIR/type-annotation-needed.rs:1:1
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the type must implement `Into<String>`
note: required by a bound in `foo`
  --> $DIR/type-annotation-needed.rs:1:11
   |
LL | fn foo<T: Into<String>>(x: i32) {}
   |           ^^^^^^^^^^^^ required by this bound in `foo`
help: consider specifying the generic argument
   |
LL |     foo::<T>(42);
   |        +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
